Fixed spacing issue for the entry

--- a/pokestats-db/src/components/TypesDisplay/TypesDisplay.css
+++ b/pokestats-db/src/components/TypesDisplay/TypesDisplay.css
@@ -12,7 +12,7 @@
 .content {
   padding: 10px;
   border-radius: 5px;
-  width: 700px;
+  width: 1000px;
 }
 
 h2 {
